// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageCropper {...props} />: elements tree with default props 1`] = `
<div>
  <AvatarEditor
    border={34}
    borderRadius={0}
    color={
      Array [
        222,
        222,
        222,
        0.6,
      ]
    }
    crossOrigin="anonymous"
    height={200}
    image="http://pic.example.com/200/200"
    onDropFile={[Function]}
    onImageChange={[Function]}
    onImageReady={[Function]}
    onLoadFailure={[Function]}
    onLoadSuccess={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onPositionChange={[Function]}
    rotate={0}
    scale={1}
    style={Object {}}
    width={200}
  />
  <Slider
    axis="x"
    disableFocusRipple={false}
    disabled={false}
    max={2}
    min={1}
    onChange={[Function]}
    required={true}
    sliderStyle={
      Object {
        "margin": "5px 0",
      }
    }
    step={0.01}
    style={Object {}}
    value={1}
  />
</div>
`;

exports[`<ImageCropper {...props} />: elements tree with scale controlled 1`] = `
<div>
  <AvatarEditor
    border={34}
    borderRadius={0}
    color={
      Array [
        222,
        222,
        222,
        0.6,
      ]
    }
    crossOrigin="anonymous"
    height={200}
    image="http://pic.example.com/200/200"
    onDropFile={[Function]}
    onImageChange={[Function]}
    onImageReady={[Function]}
    onLoadFailure={[Function]}
    onLoadSuccess={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onPositionChange={[Function]}
    rotate={0}
    scale={2}
    style={Object {}}
    width={200}
  />
  <Slider
    axis="x"
    disableFocusRipple={false}
    disabled={false}
    max={2}
    min={1}
    onChange={[Function]}
    required={true}
    sliderStyle={
      Object {
        "margin": "5px 0",
      }
    }
    step={0.01}
    style={Object {}}
    value={2}
  />
</div>
`;
